# saanjh-sahayak-rift

.github/workflows/: ec2-deploy.yaml  server-deploy.yaml  vercel-deploy.yaml
client/: next.config.ts  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
client/src/components/: header.tsx  login.tsx
ec2-agent/: pyproject.toml  run.bat  run.sh  settings.toml
ec2-agent/src/app/: api.py  app.py  config.py  handlers.py
ec2-agent/src/core/: exceptions.py
ec2-agent/src/endpoints/: __init__.py  execution.py  fix.py  health.py  session.py  streaming_execution.py
ec2-agent/src/models/: __init__.py  execution.py  fix.py
ec2-agent/src/server.egg-info/: PKG-INFO
ec2-agent/src/services/: docker_service.py  git_service.py  test_runner.py
ec2-agent/src/utils/: parsers.py
frontend/: package-lock.json  package.json
server/: pyproject.toml
server-ai/: Dockerfile  results.json  run.bat  run.sh  settings.toml
server-ec2/: .gitignore  Dockerfile
server/src/app/: api.py  app.py  config.py  handlers.py
server/src/core/: __init__.py  exceptions.py
server/src/endpoints/: __init__.py  agent.py  agent_ws.py  health.py  pr.py
server/src/graph/: healing_graph.py
server/src/llm/: __init__.py  llm_client.py
server/src/models/: __init__.py  agent.py
server/src/nodes/: execute_tests.py  fix_code.py  select_error.py
server/src/runner/: agent_runner.py  streaming_runner.py
server/src/services/: ec2_client.py
server/src/state/: graph_state.py
server/src/tools/: ci_tools.py  file_tools.py
(+45 files in other folders)
