[project]
name = "server"
version = "0.1.0"
description = "Autonomous DevOps Agent — Main Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.13.0",
    "together>=1.5.6",
    "uvicorn[standard]>=0.41.0",
]
