[project]
name = "server"
version = "0.1.0"
description = "Autonomous DevOps Agent — RIFT 2026 Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "groq>=0.25.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.13.0",
    "uvicorn[standard]>=0.41.0",
]
